--- a/HimalayanHolidays/HimalayanHolidays.csproj
+++ b/HimalayanHolidays/HimalayanHolidays.csproj
@@ -353,6 +353,7 @@
     <Content Include="serialization\master\sitecore\templates\Himalayan Holidays\Page Types.item" />
     <Content Include="serialization\master\sitecore\templates\Himalayan Holidays\Page Types\Home.item" />
     <Content Include="serialization\master\sitecore\templates\Himalayan Holidays\Page Types\Text Page.item" />
+    <Content Include="Views\Renderings\HimalayanHolidays\Logo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -371,7 +372,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Renderings\HimalayanHolidays\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
