--- a/HimalayanHolidays/HimalayanHolidays.csproj
+++ b/HimalayanHolidays/HimalayanHolidays.csproj
@@ -375,6 +375,7 @@
     <Content Include="serialization\master\sitecore\layout\Renderings\Himalayan Holidays\SocialMenu.item" />
     <Content Include="serialization\master\sitecore\layout\Renderings\Himalayan Holidays\Testimonials.item" />
     <Content Include="Views\Renderings\HimalayanHolidays\Breadcrumb.cshtml" />
+    <Content Include="Views\Renderings\HimalayanHolidays\Accordian.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
