--- a/HimalayanHolidays/HimalayanHolidays.csproj
+++ b/HimalayanHolidays/HimalayanHolidays.csproj
@@ -376,7 +376,8 @@
     <Content Include="serialization\master\sitecore\layout\Renderings\Himalayan Holidays\Testimonials.item" />
     <Content Include="Views\Renderings\HimalayanHolidays\Breadcrumb.cshtml" />
     <Content Include="Views\Renderings\HimalayanHolidays\Accordian.cshtml" />
-    <Content Include="Views\Renderings\FeaturedHoliday.cshtml" />
+    <Content Include="Views\Renderings\HimalayanHolidays\FeaturedHoliday.cshtml" />
+    <Content Include="Views\Renderings\HimalayanHolidays\FooterMenu.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
