Carousel and Primary Menu commited local

--- a/HimalayanHolidays/HimalayanHolidays.csproj
+++ b/HimalayanHolidays/HimalayanHolidays.csproj
@@ -381,6 +381,7 @@
     <Content Include="Views\Renderings\HimalayanHolidays\Copyright.cshtml" />
     <Content Include="Views\Renderings\HimalayanHolidays\CommentForm.cshtml" />
     <Content Include="Views\Renderings\HimalayanHolidays\LatestComment.cshtml" />
+    <Content Include="Views\Renderings\HimalayanHolidays\PrimaryMenu.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
