--- a/HimalayanHolidays/HimalayanHolidays.csproj
+++ b/HimalayanHolidays/HimalayanHolidays.csproj
@@ -286,7 +286,6 @@
     <Content Include="Contents\Images\slider.psd" />
     <Content Include="App_Config\ConnectionStrings.config" />
     <Content Include="App_Config\Sitecore.config" />
-    <Content Include="App_Config\Include\DynamicPlaceholders\DynamicPlaceholders.config" />
     <None Include="Properties\PublishProfiles\HH-Local.pubxml" />
     <Content Include="Views\Layouts\HimalayanHolidays\HHResponsiveLayout.cshtml" />
     <Content Include="serialization\master\sitecore\content.item" />
@@ -423,6 +422,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Config\Include\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
