--- a/HimalayanHolidays/Views/Web.config
+++ b/HimalayanHolidays/Views/Web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Sitecore.Mvc" />
         <add namespace="Sitecore.Mvc.Presentation" />
-        <!--<add namespace="DynamicPlaceholders.Mvc.Extensions" />-->
+        <add namespace="DynamicPlaceholders.Mvc.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
