--- a/HimalayanHolidays/packages.config
+++ b/HimalayanHolidays/packages.config
@@ -22,6 +22,7 @@
   <package id="Sitecore.Analytics.Model" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Analytics.Processing" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Kernel" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Logging" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Logging.Client" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Marketing" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
