--- a/HimalayanHolidays.Tests/HimalayanHolidays.Tests.csproj
+++ b/HimalayanHolidays.Tests/HimalayanHolidays.Tests.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="DynamicPlaceholders, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamicPlaceholders.1.2.0.2\lib\net452\DynamicPlaceholders.dll</HintPath>
     </Reference>
