--- a/HimalayanHolidays.Tests/packages.config
+++ b/HimalayanHolidays.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="DynamicPlaceholders" version="1.2.0.2" targetFramework="net461" />
   <package id="DynamicPlaceholders.Mvc" version="1.2.0.0" targetFramework="net461" />
 </packages>
