--- a/HimalayanHolidays/packages.config
+++ b/HimalayanHolidays/packages.config
@@ -29,7 +29,7 @@
   <package id="Sitecore.Logging" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Logging.Client" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Marketing" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
-  <package id="Sitecore.Marketing.Core" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Core" version="8.2.170614" targetPublicKeyToken=b77a5c561934e089Framework="net461" developmentDependency="true" />
   <package id="Sitecore.Marketing.Taxonomy" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Mvc" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Mvc.Analytics" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
